bk_ida/gccida/c1/rm_line_notes
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1646:4: error: expected ';' after expression
rtx v3; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1646:5: error: use of undeclared identifier 'v3'
rtx v3; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1647:4: error: expected ';' after expression
rtx v4; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1647:5: error: use of undeclared identifier 'v4'
rtx v4; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1652:1: error: use of undeclared identifier 'v3'
v3 = head; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1655:17: error: use of undeclared identifier 'v3'
if ( *( _WORD *)v3 == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1657:1: error: use of undeclared identifier 'v4'
v4 = unlink_line_notes( v3, rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1657:25: error: use of undeclared identifier 'v3'
v4 = unlink_line_notes( v3, rtx); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1658:6: error: use of undeclared identifier 'v3'
if ( v3 == tail ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1660:6: error: use of undeclared identifier 'v3'
if ( v3 == head ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1662:1: error: use of undeclared identifier 'v3'
v3 = v4; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1662:6: error: use of undeclared identifier 'v4'
v3 = v4; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1663:6: error: use of undeclared identifier 'v4'
if ( v4 == rtx ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1666:1: error: use of undeclared identifier 'v3'
v3 = v3[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1666:6: error: use of undeclared identifier 'v3'
v3 = v3[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/haifa-sched.c:1668:9: error: use of undeclared identifier 'v3'
while ( v3 != rtx ); 
        ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rm_line_notes/src/obj/haifa-sched.o] Error 1
